sre/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edulms
  labels:
    app.kubernetes.io/part-of: edulms-sre
    monitoring: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: edulms-sre
