sre/k8s/06-assessment.yaml
apiVersion: v1
kind: Service
metadata:
  name: assessment
  namespace: edulms
  labels: { app: assessment, tier: backend }
spec:
  selector: { app: assessment }
  ports:
    - name: grpc
      port: 50053
      targetPort: 50053
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment
  namespace: edulms
  labels: { app: assessment, tier: backend }
spec:
  replicas: 2
  selector:
    matchLabels: { app: assessment }
  template:
    metadata:
      labels: { app: assessment, tier: backend }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
    spec:
      containers:
        - name: assessment
          image: edulms/assessment:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50053
              name: grpc
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "750m", memory: "384Mi" }
          readinessProbe:
            tcpSocket: { port: 50053 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 50053 }
            initialDelaySeconds: 20
            periodSeconds: 15
