sre/k8s/07-notification.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: edulms
  labels: { app: notification, tier: backend }
spec:
  selector: { app: notification }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: edulms
  labels: { app: notification, tier: backend }
spec:
  replicas: 2
  selector:
    matchLabels: { app: notification }
  template:
    metadata:
      labels: { app: notification, tier: backend }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
    spec:
      containers:
        - name: notification
          image: edulms/notification:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
