sre/k8s/09-user-profile.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile
  namespace: edulms
  labels: { app: user-profile, tier: backend }
spec:
  selector: { app: user-profile }
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
  namespace: edulms
  labels: { app: user-profile, tier: backend }
spec:
  replicas: 2
  selector:
    matchLabels: { app: user-profile }
  template:
    metadata:
      labels: { app: user-profile, tier: backend }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: user-profile
          image: edulms/user-profile:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
          resources:
            requests: { cpu: "50m",  memory: "64Mi" }
            limits:   { cpu: "300m", memory: "192Mi" }
          readinessProbe:
            httpGet: { path: /ready, port: 8082 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: 8082 }
            initialDelaySeconds: 10
            periodSeconds: 10
